hphp/test/slow/inout/bad-call-1.php.expectf

Fatal error: syntax error, unexpected '=', expecting ')' in %s/bad-call-1.php on line 3
